Wyjątki
Dodałem wyjątki